--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 Плагин для LiveStreet
 
-Позволяет пользователю игнорировать комментарии и топики других пользователей.
-Комментарии игнорируемых пользователей отображаются скрытыми, как комментарии с отрицательным рейтингом. Информация о том что пользователь оставил комментарий продолжает отображаться в Прямом эфире. 
-Топики скрываются из всех выдач, перестают влиять на счетчики. Единственная возможность их просмотреть - непосредственно через профиль пользователя.
+*Позволяет пользователю игнорировать комментарии и топики других пользователей.
+*Комментарии игнорируемых пользователей отображаются скрытыми, как комментарии с отрицательным рейтингом. 
+ Информация о том что пользователь оставил комментарий продолжает отображаться в Прямом эфире. 
+*Топики скрываются из всех выдач, перестают влиять на счетчики. 
+ Единственная возможность их просмотреть - непосредственно через профиль пользователя.
 
 Требования: LiveStreet 0.5, тема на основе jQuery.
 
