ignore user talks

--- a/README
+++ b/README
@@ -9,13 +9,21 @@
 Требования: LiveStreet 0.5, тема на основе jQuery.
 
 TO DO:
-- позволять пользователю выбирать, что именно игнорировать - топики или комментарии.
-- добавить игнорирование писем в профиль.
-- добавить возможность админу запрещать игнорировать пользователя в профиле пользователя.
- 
+- вывод при просмотре собственного профиля списка игнорируемых
+
+ЛИЦЕНЗИИ
+-------
+
+Файлы в этом архиве распостраняются по лицензии GNU GPL. Вы можете найти копию
+этой лицензии в файле LICENSE.txt.
+
 
 ИСТОРИЯ ВЕРСИЙ
 --------------
+v 0.0.2
+- пользователь сам выбирает, что именно игнорировать - топики или комментарии
+- добавлено игнорирование писем в профиль
+- добавлено возможность админу запрещать игнорировать пользователя в профиле пользователя
 
 v 0.0.1
 - Релиз плагина
