update to ls 1.0

--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 *Топики скрываются из всех выдач, перестают влиять на счетчики. 
  Единственная возможность их просмотреть - непосредственно через профиль пользователя.
 
-Требования: LiveStreet 0.5, тема на основе jQuery.
+Требования: LiveStreet 1.0, тема на основе jQuery.
 
 TO DO:
 - вывод при просмотре собственного профиля списка игнорируемых
@@ -20,6 +20,9 @@ TO DO:
 
 ИСТОРИЯ ВЕРСИЙ
 --------------
+v 0.0.3
+- Обновление до LS 1.0
+
 v 0.0.2
 - пользователь сам выбирает, что именно игнорировать - топики или комментарии
 - добавлено игнорирование писем в профиль
